test/log/compare/vcmplt_vv_i16_m.txt
vcmplt_vv_i16_m.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vcmplt_vv_i16_m.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vcmplt_vv_i16_m.c:30:6: warning: no previous prototype for 'vcmplt_vv_i16_m_golden' [-Wmissing-prototypes]
   30 | void vcmplt_vv_i16_m_golden(uint64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
vcmplt_vv_i16_m.c: In function 'vcmplt_vv_i16_m_golden':
vcmplt_vv_i16_m.c:32:25: error: 'TODO' undeclared (first use in this function)
   32 |         exp_result[i] = TODO;
      |                         ^~~~
vcmplt_vv_i16_m.c:32:25: note: each undeclared identifier is reported only once for each function it appears in
vcmplt_vv_i16_m.c: In function 'main':
vcmplt_vv_i16_m.c:52:5: warning: implicit declaration of function 'data_init_bool'; did you mean 'data_init_scalar'? [-Wimplicit-function-declaration]
   52 |     data_init_bool(mask, exp_mask, 32, 0xffff);
      |     ^~~~~~~~~~~~~~
      |     data_init_scalar
vcmplt_vv_i16_m.c:58:5: error: too many arguments to function 'vcmplt_vv_i16_m_golden'
   58 |     vcmplt_vv_i16_m_golden(exp_mask,exp_maskoff,exp_a,exp_b,exp_result);
      |     ^~~~~~~~~~~~~~~~~~~~~~
vcmplt_vv_i16_m.c:30:6: note: declared here
   30 | void vcmplt_vv_i16_m_golden(uint64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~~~~~
vcmplt_vv_i16_m.c:61:35: error: incompatible type for argument 2 of 'vcmplt_vv_i16_m'
   61 |     result = vcmplt_vv_i16_m(mask,maskoff,a,b);
      |                                   ^~~~~~~
      |                                   |
      |                                   int16x32_t
In file included from vcmplt_vv_i16_m.c:4:
/opt/analog/riscv/1.0.1/Riscv/software/host/bin/gcc/lib/gcc/riscv32-rivai-elf/10.2.1/include/rivai_rugrats.h:2627:1: note: expected 'bool32_t' but argument is of type 'int16x32_t'
 2627 | __RUGRATS_CMP_VV_OP (cmplt, i, int, int, 16, 16, 32)
      | ^~~~~~~~~~~~~~~~~~~
vcmplt_vv_i16_m.c:66:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'uint64_t' {aka 'long long unsigned int'} [-Wformat=]
   66 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     uint64_t {aka long long unsigned int}
      |                                                               %llx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vcmplt_vv_i16_m.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vcmplt_vv_i16_m"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vcmplt_vv_i16_m.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vcmplt_vv_i16_m.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed